# prj-apex-data-collector-agent

./: Dockerfile  README.md  pyproject.toml
docs/adr/: 0001-evidence-plane-deployment.md
src/data_collector/: __init__.py  __main__.py  collector.py  config.py  gcp.py  limits.py  memory.py  models.py  ports.py  routing.py  server.py
tests/: test_collect.py  test_concurrency.py  test_config.py  test_gcp_adapter.py  test_http.py  test_limits.py  test_routing.py  test_telemetry.py
